--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ body::before {
 为保障招聘服务的公平与透明，请您在购买会员套餐前仔细阅读以下须知与退款规则。支付即代表您已充分了解并同意本条款。
 
 一、服务使用说明
-功能类别	权益说明
-职位发布	根据套餐时长、数量限制，发布招聘岗位
-简历查看	查看投递或简历库中求职者信息
-岗位推广	包含置顶、自动刷新、首页展示等，提高曝光
-人工协助	提供岗位优化、简历推荐、客服指导等
+功能类别:权益说明
+职位发布(根据套餐时长、数量限制，发布招聘岗位)
+简历查看	(查看投递或简历库中求职者信息)
+岗位推广	(包含置顶、自动刷新、首页展示等，提高曝光)
+人工协助	(提供岗位优化、简历推荐、客服指导等)
 二、支持退款的情形
 1.在满足以下全部条件时，客户可申请全额退款：
 2.自付款之日起 7 日内提出申请；
@@ -98,11 +98,11 @@ body::before {
 四、部分退款说明
 1.  若客户在已使用部分服务后申请退款，平台将按以下标准核算已用服务价值：
 项目	计费标准
-职位发布	30 元/天/职位
-简历查看	5 元/份
-岗位置顶	10 元/天/职位
-自动刷新	5 元/次（单天最高计 14 次）
-人工协助	100 元/次
+职位发布（30 元/天/职位）
+简历查看（5 元/份）
+岗位置顶（10 元/天/职位）
+自动刷新（5 元/次/单天最高计 14 次）
+人工协助（100 元/次）
 2. 退款金额 = 实际支付金额 - 已使用服务价值总额。
 五、退款流程
 1.  客户联系客服提交退款申请；
@@ -114,7 +114,7 @@ body::before {
 1.  服务一经使用即计费，请您在购买前充分了解自身招聘需求，不做任何招聘效果保证，请使用者充分合理使用权益。
 2.  因政策调整、不可抗力或系统故障等原因造成服务中断，平台将酌情延长服务，不承担退款义务。
 温馨提醒：支付即代表您已阅读并同意《会员服务须知与退款条款》。
-平台保留最终解释权。
+成优网平台保留最终解释权。
       </div>
 
       <button class="pay-btn" id="payBtn" disabled>支付/确认开通</button>
@@ -192,3 +192,4 @@ body::before {
   </script>
 </body>
 </html>
+
