--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body::before {
 
 一、服务使用说明
 功能类别:权益说明
-职位发布(根据套餐时长、数量限制，发布招聘岗位)
+职位发布（根据套餐时长、数量限制，发布招聘岗位）
 简历查看	(查看投递或简历库中求职者信息)
 岗位推广	(包含置顶、自动刷新、首页展示等，提高曝光)
 人工协助	(提供岗位优化、简历推荐、客服指导等)
@@ -192,4 +192,5 @@ body::before {
   </script>
 </body>
 </html>
+
 
