--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>成优网·套餐价格表及购买须知</title>
   <style>
-    /* ===== 原有样式保持不变 ===== */
     body { font-family:"微软雅黑",sans-serif; background:#f5f5f5; margin:0; padding:0; position: relative; z-index: 0; }
 
     .container { max-width:600px; margin:20px auto; background:#fff; padding:20px;
@@ -14,8 +13,8 @@
     .page { display:none; }
     .active { display:block; }
     .img-preview { max-width:100%; margin-bottom:20px; }
-    .pay-btn, .next-btn { display:block; width:100%; padding:15px; text-align:center; background:#06c1ae; color:#fff;
-                           font-size:18px; border:none; border-radius:8px; cursor:pointer; }
+    .pay-btn, .next-btn, .back-btn { display:block; width:100%; padding:15px; text-align:center; background:#06c1ae; color:#fff;
+                           font-size:18px; border:none; border-radius:8px; cursor:pointer; margin-top:10px; }
     .pay-btn:disabled, .next-btn:disabled { background:#ccc; cursor:not-allowed; }
     .contract { max-height:300px; overflow-y:auto; border:1px solid #ddd; padding:15px;
                 background:#fafafa; line-height:1.6; margin-bottom:20px; white-space: pre-wrap; }
@@ -25,23 +24,29 @@
     .qr-container img { max-width:200px; }
     .success-message { display:none; text-align:center; font-size:20px; color:#06c1ae; margin-top:20px; }
 
-    /* ===== 优化后的水印样式 ===== */
+    /* ===== 水印样式 ===== */
     body::before {
       content: "成优网";
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(-30deg);
-      font-size: 60px;
-      color: rgba(0, 0, 0, 0.08); /* 更淡一点 */
-      white-space: nowrap;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       z-index: 0;
       pointer-events: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: space-around;
+      color: rgba(0,0,0,0.15);
+      font-size: 60px;
+      transform: rotate(-30deg);
     }
   </style>
 </head>
 <body>
   <div class="container">
+
     <!-- ===== 第一页：套餐界面 ===== -->
     <div class="page active" id="page1">
       <h1>成优网·套餐价格表</h1>
@@ -52,16 +57,7 @@
 
     <!-- ===== 第二页：退款协议 + 支付 ===== -->
     <div class="page" id="page2">
-      <!-- 新增返回按钮 -->
-      <button onclick="goBack()" style="margin-bottom:15px;background:#ddd;color:#333;
-      padding:8px 12px;border:none;border-radius:6px;cursor:pointer;">返回套餐页面</button>
-
-      <h2>会员服务须知与退款条款</h2>
-
-      <!-- 新增提示 -->
-      <p style="font-size:14px;color:#666;margin-bottom:10px;">
-        请先勾选并完整阅读条款，支付按钮才会解锁
-      </p>
+      <h1>会员服务须知与退款条款</h1>
 
       <div class="checkbox-container">
         <input type="checkbox" id="agree">
@@ -119,11 +115,11 @@
       </div>
 
       <button class="pay-btn" id="payBtn" disabled>支付/确认开通</button>
+      <button class="back-btn" onclick="goBack()">返回</button>
 
       <div class="qr-container" id="qrContainer">
         <p>请使用微信扫描二维码支付对应金额：</p>
         <img src="https://rpin-cc.oss-cn-chengdu.aliyuncs.com/zimu_zhaopin/2508/22/68a82d512cf72.png" alt="收款二维码">
-        <p style="font-size:12px;color:#999;">二维码由【成优网官方】提供，请放心支付</p>
       </div>
 
       <div class="success-message" id="successMessage">
@@ -131,3 +127,79 @@
       </div>
     </div>
   </div>
+
+  <!-- ===== JS 脚本 ===== -->
+  <script>
+    // 页面切换逻辑
+    const page1 = document.getElementById('page1');
+    const page2 = document.getElementById('page2');
+    const nextBtn = document.getElementById('nextBtn');
+
+    nextBtn.addEventListener('click', () => {
+      page1.classList.remove('active');
+      page2.classList.add('active');
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    });
+
+    // 返回按钮逻辑
+    function goBack() {
+      page2.classList.remove('active');
+      page1.classList.add('active');
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    }
+
+    // 勾选显示协议 + 滚动到底启用支付
+    const agreeCheckbox = document.getElementById('agree');
+    const payBtn = document.getElementById('payBtn');
+    const qrContainer = document.getElementById('qrContainer');
+    const successMessage = document.getElementById('successMessage');
+    const refundContent = document.getElementById('refundContent');
+
+    agreeCheckbox.addEventListener('change', () => {
+      if (agreeCheckbox.checked) {
+        refundContent.style.display = 'block';  // 显示协议
+        payBtn.disabled = true;                 // 先禁用支付按钮
+      } else {
+        refundContent.style.display = 'none';
+        payBtn.disabled = true;
+      }
+    });
+
+    refundContent.addEventListener('scroll', () => {
+      const scrollBottom = refundContent.scrollHeight - refundContent.scrollTop - refundContent.clientHeight;
+      if (scrollBottom < 5 && agreeCheckbox.checked) {
+        payBtn.disabled = false;
+      }
+    });
+
+    // 支付按钮点击逻辑
+    let confirmPayBtn = null;
+    payBtn.addEventListener('click', () => {
+      qrContainer.style.display = 'block';  // 显示二维码
+
+      // 避免重复生成按钮
+      if (!confirmPayBtn) {
+        confirmPayBtn = document.createElement('button');
+        confirmPayBtn.textContent = "我已支付";
+        confirmPayBtn.style.display = "block";
+        confirmPayBtn.style.width = "100%";
+        confirmPayBtn.style.padding = "15px";
+        confirmPayBtn.style.marginTop = "10px";
+        confirmPayBtn.style.background = "#06c1ae";
+        confirmPayBtn.style.color = "#fff";
+        confirmPayBtn.style.border = "none";
+        confirmPayBtn.style.borderRadius = "8px";
+        confirmPayBtn.style.cursor = "pointer";
+        page2.appendChild(confirmPayBtn);
+
+        confirmPayBtn.addEventListener('click', () => {
+          successMessage.style.display = 'block';
+          qrContainer.style.display = 'none';
+          confirmPayBtn.style.display = 'none';
+          successMessage.scrollIntoView({behavior: "smooth"});
+        });
+      }
+    });
+  </script>
+</body>
+</html>
