--- a/index.html
+++ b/index.html
@@ -1,96 +1,59 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>成优网·套餐价格表及购买须知</title>
-  <style>
-    body { font-family:"微软雅黑",sans-serif; background:#f5f5f5; margin:0; padding:0; position: relative; z-index: 0; }
-    .container { max-width:600px; margin:20px auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.1); position: relative; z-index: 1; }
-    h1 { text-align:center; color:#333; margin-bottom:20px; }
-    .page { display:none; }
-    .active { display:block; }
-    .img-preview { max-width:100%; margin-bottom:20px; }
-    .pay-btn, .next-btn, .back-btn { display:block; width:100%; padding:15px; text-align:center; background:#06c1ae; color:#fff; font-size:18px; border:none; border-radius:8px; cursor:pointer; margin-top:10px; }
-    .pay-btn:disabled, .next-btn:disabled { background:#ccc; cursor:not-allowed; }
-    .contract { max-height:300px; overflow-y:auto; border:1px solid #ddd; padding:15px; background:#fafafa; line-height:1.6; margin-bottom:20px; white-space: pre-wrap; }
-    .checkbox-container { display:flex; align-items:center; margin-bottom:20px; }
-    .checkbox-container input { margin-right:10px;width:18px;height:18px; }
-    .qr-container { text-align:center; margin-top:20px; display:none; }
-    .qr-container img { max-width:200px; }
-    .success-message { display:none; text-align:center; font-size:20px; color:#06c1ae; margin-top:20px; }
-    body::before {
-      content: "成优网";
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; pointer-events: none;
-      display: flex; flex-wrap: wrap; justify-content: space-around; align-items: space-around;
-      color: rgba(0,0,0,0.15); font-size: 60px; transform: rotate(-30deg);
+<script>
+  // 元素绑定
+  const page1 = document.getElementById('page1');
+  const page2 = document.getElementById('page2');
+  const nextBtn = document.getElementById('nextBtn');
+  const backBtn = document.getElementById('backBtn');
+  const agreeCheckbox = document.getElementById('agree');
+  const payBtn = document.getElementById('payBtn');
+  const qrContainer = document.getElementById('qrContainer');
+  const successMessage = document.getElementById('successMessage');
+  const refundContent = document.getElementById('refundContent');
+
+  // 下一步 / 返回
+  nextBtn.addEventListener('click', () => {
+    page1.classList.remove('active');
+    page2.classList.add('active');
+    window.scrollTo({ top:0, behavior:"smooth" });
+  });
+  backBtn.addEventListener('click', () => {
+    page2.classList.remove('active');
+    page1.classList.add('active');
+    window.scrollTo({ top:0, behavior:"smooth" });
+  });
+
+  // 勾选协议启用支付
+  agreeCheckbox.addEventListener('change', () => {
+    if(agreeCheckbox.checked){
+      refundContent.style.display = 'block';
+      payBtn.disabled = false; // 直接启用支付按钮，手机端无需滚动
+    } else {
+      refundContent.style.display = 'none';
+      payBtn.disabled = true;
     }
-  </style>
-</head>
-<body>
-  <div class="container">
+  });
 
-    <!-- 第一页：套餐界面 -->
-    <div class="page active" id="page1">
-      <h1>成优网·套餐价格表</h1>
-      <p>请查看套餐价格表如下：</p>
-      <img class="img-preview" src="https://rpin-cc.oss-cn-chengdu.aliyuncs.com/zimu_zhaopin/2508/22/68a83171853a7.jpg" alt="套餐价格表">
-      <button class="next-btn" id="nextBtn" type="button">下一步</button>
-    </div>
-    <!-- 第二页：协议+支付 -->
-    <div class="page" id="page2">
-      <h1>会员服务须知与退款条款</h1>
+  // 支付按钮逻辑
+  let confirmPayBtn = null;
+  payBtn.addEventListener('click', () => {
+    qrContainer.style.display = 'block';
+    if(!confirmPayBtn){
+      confirmPayBtn = document.createElement('button');
+      confirmPayBtn.textContent = "我已支付";
+      confirmPayBtn.style.cssText = "display:block;width:100%;padding:15px;margin-top:10px;background:#06c1ae;color:#fff;border:none;border-radius:8px;cursor:pointer;";
+      page2.appendChild(confirmPayBtn);
 
-      <div class="checkbox-container">
-        <input type="checkbox" id="agree">
-        <label for="agree">我已阅读并同意以下条款</label>
-      </div>
-
-      <div class="contract" id="refundContent">
-成优网®招聘平台 · 会员服务须知与退款条款
-为保障招聘服务的公平与透明，请您在购买会员套餐前仔细阅读以下须知与退款规则。支付即代表您已充分了解并同意本条款。
-
-一、服务使用说明
-职位发布（根据套餐时长、数量限制，发布招聘岗位）
-简历查看（查看投递或简历库中求职者信息）
-岗位推广（包含置顶、自动刷新、首页展示等，提高曝光）
-人工协助（提供岗位优化、简历推荐、客服指导等）
-
-二、支持退款的情形
-1. 自付款之日起7日内提出申请；
-2. 未发布职位；
-3. 未查看/下载简历；
-4. 未使用推广服务；
-5. 未接受人工服务；
-6. 未使用赠送权益或活动优惠。
-
-三、不支持退款的情形
-（略，可按原文粘贴完整内容）
-
-四、部分退款说明
-（略，可按原文粘贴完整内容）
-
-五、退款流程
-（略，可按原文粘贴完整内容）
-
-六、特别提示
-1. 服务一经使用即计费，请充分了解需求。
-2. 因不可抗力或系统故障造成服务中断，平台将酌情延长服务，不承担退款义务。
-      </div>
-
-      <button class="pay-btn" id="payBtn" disabled>支付/确认开通</button>
-      <button class="back-btn" id="backBtn">返回</button>
-
-      <div class="qr-container" id="qrContainer">
-        <p>请使用微信扫描二维码支付对应金额：</p>
-        <img src="https://rpin-cc.oss-cn-chengdu.aliyuncs.com/zimu_zhaopin/2508/22/68a82d512cf72.png" alt="收款二维码">
-      </div>
-
-      <div class="success-message" id="successMessage">
-        支付成功！感谢您使用成优网招聘平台，截图此页面联系微信客服。
-      </div>
-    </div>
-  </div>
+      confirmPayBtn.addEventListener('click', ()=>{
+        successMessage.style.display = 'block';
+        qrContainer.style.display = 'none';
+        confirmPayBtn.style.display = 'none';
+        successMessage.scrollIntoView({behavior:"smooth"});
+      });
+    }
+  });
+</script>
+</body>
+</html>
 <script>
   // 元素绑定
   const page1 = document.getElementById('page1');
