--- a/index.html
+++ b/index.html
@@ -1,112 +1,194 @@
-<script>
-  // 元素绑定
-  const page1 = document.getElementById('page1');
-  const page2 = document.getElementById('page2');
-  const nextBtn = document.getElementById('nextBtn');
-  const backBtn = document.getElementById('backBtn');
-  const agreeCheckbox = document.getElementById('agree');
-  const payBtn = document.getElementById('payBtn');
-  const qrContainer = document.getElementById('qrContainer');
-  const successMessage = document.getElementById('successMessage');
-  const refundContent = document.getElementById('refundContent');
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>成优网·套餐价格表及购买须知</title>
+  <style>
+    /* ===== 原有样式保持不变 ===== */
+    body { font-family:"微软雅黑",sans-serif; background:#f5f5f5; margin:0; padding:0; position: relative; z-index: 0; }
 
-  // 下一步 / 返回
-  nextBtn.addEventListener('click', () => {
-    page1.classList.remove('active');
-    page2.classList.add('active');
-    window.scrollTo({ top:0, behavior:"smooth" });
-  });
-  backBtn.addEventListener('click', () => {
-    page2.classList.remove('active');
-    page1.classList.add('active');
-    window.scrollTo({ top:0, behavior:"smooth" });
-  });
+    .container { max-width:600px; margin:20px auto; background:#fff; padding:20px;
+                 border-radius:10px; box-shadow:0 0 15px rgba(0,0,0,0.1); position: relative; z-index: 1; }
+    h1 { text-align:center; color:#333; margin-bottom:20px; }
+    .page { display:none; }
+    .active { display:block; }
+    .img-preview { max-width:100%; margin-bottom:20px; }
+    .pay-btn, .next-btn { display:block; width:100%; padding:15px; text-align:center; background:#06c1ae; color:#fff;
+                           font-size:18px; border:none; border-radius:8px; cursor:pointer; }
+    .pay-btn:disabled, .next-btn:disabled { background:#ccc; cursor:not-allowed; }
+    .contract { max-height:300px; overflow-y:auto; border:1px solid #ddd; padding:15px;
+                background:#fafafa; line-height:1.6; margin-bottom:20px; white-space: pre-wrap; }
+    .checkbox-container { display:flex; align-items:center; margin-bottom:20px; }
+    .checkbox-container input { margin-right:10px;width:18px;height:18px; }
+    .qr-container { text-align:center; margin-top:20px; display:none; }
+    .qr-container img { max-width:200px; }
+    .success-message { display:none; text-align:center; font-size:20px; color:#06c1ae; margin-top:20px; }
 
-  // 勾选协议启用支付
-  agreeCheckbox.addEventListener('change', () => {
-    if(agreeCheckbox.checked){
-      refundContent.style.display = 'block';
-      payBtn.disabled = false; // 直接启用支付按钮，手机端无需滚动
-    } else {
-      refundContent.style.display = 'none';
-      payBtn.disabled = true;
+    /* ===== 新增水印样式 ===== */
+body::before {
+  content: "成优网";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  pointer-events: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: space-around;
+  color: rgba(0,0,0,0.15); /* 提高透明度 */
+  font-size: 60px;          /* 字体变大 */
+  transform: rotate(-30deg);
+}
+
     }
-  });
+  </style>
+</head>
+<body>
+  <div class="container">
 
-  // 支付按钮逻辑
-  let confirmPayBtn = null;
-  payBtn.addEventListener('click', () => {
-    qrContainer.style.display = 'block';
-    if(!confirmPayBtn){
-      confirmPayBtn = document.createElement('button');
+    <!-- ===== 第一页：套餐界面 ===== -->
+    <div class="page active" id="page1">
+      <h1>成优网·套餐价格表</h1>
+      <p>请查看套餐价格表如下：</p>
+      <img class="img-preview" src="https://rpin-cc.oss-cn-chengdu.aliyuncs.com/zimu_zhaopin/2508/22/68a83171853a7.jpg" alt="套餐价格表">
+      <button class="next-btn" id="nextBtn">下一步</button>
+    </div>
+
+    <!-- ===== 第二页：退款协议 + 支付 ===== -->
+    <div class="page" id="page2">
+      <h1>会员服务须知与退款条款</h1>
+
+      <div class="checkbox-container">
+        <input type="checkbox" id="agree">
+        <label for="agree">我已阅读并同意以下条款</label>
+      </div>
+
+      <div class="contract" id="refundContent" style="display:none;">
+成优网®招聘平台 · 会员服务须知与退款条款
+为保障招聘服务的公平与透明，请您在购买会员套餐前仔细阅读以下须知与退款规则。支付即代表您已充分了解并同意本条款。
+
+一、服务使用说明
+功能类别:权益说明
+职位发布（根据套餐时长、数量限制，发布招聘岗位）
+简历查看	(查看投递或简历库中求职者信息)
+岗位推广	(包含置顶、自动刷新、首页展示等，提高曝光)
+人工协助	(提供岗位优化、简历推荐、客服指导等)
+二、支持退款的情形
+1.在满足以下全部条件时，客户可申请全额退款：
+2.自付款之日起 7 日内提出申请；
+3.未发布任何职位；
+4.未查看/下载任何简历；
+5.未使用任何推广服务（置顶、轮播、刷新等）；
+6.未接受人工服务（岗位优化、客服指导等）；
+7.未使用赠送权益或活动优惠。
+三、不支持退款的情形
+1.  出现以下任意一种情况，不予退款：
+2.  已发布职位（无论是否有人报名）；
+3.  已查看或下载简历（含简历库和投递）；
+4.  已使用推广资源（置顶、刷新、首页展示等）；
+5.  已接受人工服务（客服指导、岗位优化等）；
+6. 服务期间已产生招聘行为（收到投递、面试邀约等）；
+7. 套餐含赠送权益并已使用；
+8.付款超过 7 日；
+9.客户因自身原因停止招聘或不再使用服务。
+四、部分退款说明
+1.  若客户在已使用部分服务后申请退款，平台将按以下标准核算已用服务价值：
+项目	计费标准
+职位发布（30 元/天/职位）
+简历查看（5 元/份）
+岗位置顶（10 元/天/职位）
+自动刷新（5 元/次/单天最高计 14 次）
+人工协助（100 元/次）
+2. 退款金额 = 实际支付金额 - 已使用服务价值总额。
+五、退款流程
+1.  客户联系客服提交退款申请；
+2.  平台将在 3 个工作日内核查并反馈退款金额；
+3.  双方确认后，平台将在 7 个工作日内原路退回；
+4.  如已开发票，需先退回等额发票；
+5.  退款成功后，剩余服务将同时终止。
+六、特别提示
+1.  服务一经使用即计费，请您在购买前充分了解自身招聘需求，不做任何招聘效果保证，请使用者充分合理使用权益。
+2.  因政策调整、不可抗力或系统故障等原因造成服务中断，平台将酌情延长服务，不承担退款义务。
+温馨提醒：支付即代表您已阅读并同意《会员服务须知与退款条款》。
+成优网平台保留最终解释权。
+      </div>
+
+      <button class="pay-btn" id="payBtn" disabled>支付/确认开通</button>
+
+      <div class="qr-container" id="qrContainer">
+        <p>请使用微信扫描二维码支付对应金额：</p>
+        <img src="https://rpin-cc.oss-cn-chengdu.aliyuncs.com/zimu_zhaopin/2508/22/68a82d512cf72.png" alt="收款二维码">
+      </div>
+
+      <div class="success-message" id="successMessage">
+        支付成功！感谢您使用成优网招聘平台，截图此页面联系微信客服。
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // 页面切换逻辑
+    const page1 = document.getElementById('page1');
+    const page2 = document.getElementById('page2');
+    const nextBtn = document.getElementById('nextBtn');
+
+    nextBtn.addEventListener('click', () => {
+      page1.classList.remove('active');
+      page2.classList.add('active');
+    });
+
+    // 勾选显示协议 + 滚动到底启用支付
+    const agreeCheckbox = document.getElementById('agree');
+    const payBtn = document.getElementById('payBtn');
+    const qrContainer = document.getElementById('qrContainer');
+    const successMessage = document.getElementById('successMessage');
+    const refundContent = document.getElementById('refundContent');
+
+    agreeCheckbox.addEventListener('change', () => {
+      if (agreeCheckbox.checked) {
+        refundContent.style.display = 'block';  // 显示协议
+        payBtn.disabled = true;                 // 禁用支付按钮
+      } else {
+        refundContent.style.display = 'none';
+        payBtn.disabled = true;
+      }
+    });
+
+    refundContent.addEventListener('scroll', () => {
+      const scrollBottom = refundContent.scrollHeight - refundContent.scrollTop - refundContent.clientHeight;
+      if (scrollBottom < 5 && agreeCheckbox.checked) {
+        payBtn.disabled = false;
+      }
+    });
+
+    // 支付按钮点击逻辑
+    payBtn.addEventListener('click', () => {
+      qrContainer.style.display = 'block';  // 显示二维码
+
+      const confirmPayBtn = document.createElement('button');
       confirmPayBtn.textContent = "我已支付";
-      confirmPayBtn.style.cssText = "display:block;width:100%;padding:15px;margin-top:10px;background:#06c1ae;color:#fff;border:none;border-radius:8px;cursor:pointer;";
+      confirmPayBtn.style.display = "block";
+      confirmPayBtn.style.width = "100%";
+      confirmPayBtn.style.padding = "15px";
+      confirmPayBtn.style.marginTop = "10px";
+      confirmPayBtn.style.background = "#06c1ae";
+      confirmPayBtn.style.color = "#fff";
+      confirmPayBtn.style.border = "none";
+      confirmPayBtn.style.borderRadius = "8px";
+      confirmPayBtn.style.cursor = "pointer";
       page2.appendChild(confirmPayBtn);
 
-      confirmPayBtn.addEventListener('click', ()=>{
+      confirmPayBtn.addEventListener('click', () => {
         successMessage.style.display = 'block';
         qrContainer.style.display = 'none';
         confirmPayBtn.style.display = 'none';
-        successMessage.scrollIntoView({behavior:"smooth"});
+        successMessage.scrollIntoView({behavior: "smooth"});
       });
-    }
-  });
-</script>
-</body>
-</html>
-<script>
-  // 元素绑定
-  const page1 = document.getElementById('page1');
-  const page2 = document.getElementById('page2');
-  const nextBtn = document.getElementById('nextBtn');
-  const backBtn = document.getElementById('backBtn');
-  const agreeCheckbox = document.getElementById('agree');
-  const payBtn = document.getElementById('payBtn');
-  const qrContainer = document.getElementById('qrContainer');
-  const successMessage = document.getElementById('successMessage');
-  const refundContent = document.getElementById('refundContent');
-
-  // 下一步 / 返回
-  nextBtn.addEventListener('click', () => {
-    page1.classList.remove('active');
-    page2.classList.add('active');
-    window.scrollTo({ top:0, behavior:"smooth" });
-  });
-  backBtn.addEventListener('click', () => {
-    page2.classList.remove('active');
-    page1.classList.add('active');
-    window.scrollTo({ top:0, behavior:"smooth" });
-  });
-
-  // 勾选协议启用支付
-  agreeCheckbox.addEventListener('change', () => {
-    if(agreeCheckbox.checked){
-      refundContent.style.display = 'block';
-      payBtn.disabled = false; // 直接启用支付按钮，手机端无需滚动
-    } else {
-      refundContent.style.display = 'none';
-      payBtn.disabled = true;
-    }
-  });
-
-  // 支付按钮逻辑
-  let confirmPayBtn = null;
-  payBtn.addEventListener('click', () => {
-    qrContainer.style.display = 'block';
-    if(!confirmPayBtn){
-      confirmPayBtn = document.createElement('button');
-      confirmPayBtn.textContent = "我已支付";
-      confirmPayBtn.style.cssText = "display:block;width:100%;padding:15px;margin-top:10px;background:#06c1ae;color:#fff;border:none;border-radius:8px;cursor:pointer;";
-      page2.appendChild(confirmPayBtn);
-
-      confirmPayBtn.addEventListener('click', ()=>{
-        successMessage.style.display = 'block';
-        qrContainer.style.display = 'none';
-        confirmPayBtn.style.display = 'none';
-        successMessage.scrollIntoView({behavior:"smooth"});
-      });
-    }
-  });
-</script>
+    });
+  </script>
 </body>
 </html>
