--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
 
       <div class="success-message" id="successMessage">
-        支付成功！感谢您使用成优网招聘平台，截图此页面联系微信客服。
+        © 2025 成优网招聘平台· www.rpin.cc · 微信客服：bmxxw03
       </div>
     </div>
   </div>
@@ -186,3 +186,4 @@
   </script>
 </body>
 </html>
+
