--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- ===== 第二页：退款协议 + 支付 ===== -->
     <div class="page" id="page2">
-      <h1>会员服务须知与退款条款</h1>
+      <h1>《会员服务》与《退款须知》</h1>
 
       <div class="checkbox-container">
         <input type="checkbox" id="agree">
@@ -70,9 +70,9 @@
 一、服务使用说明
 功能类别:权益说明
 职位发布（根据套餐时长、数量限制，发布招聘岗位）
-简历查看	(查看投递或简历库中求职者信息)
-岗位推广	(包含置顶、自动刷新、首页展示等，提高曝光)
-人工协助	(提供岗位优化、简历推荐、客服指导等)
+简历查看（查看投递或简历库中求职者信息）
+岗位推广（包含置顶、自动刷新、首页展示等，提高曝光）
+人工协助（提供岗位优化、简历推荐、客服指导等）
 二、支持退款的情形
 1.在满足以下全部条件时，客户可申请全额退款：
 2.自付款之日起 7 日内提出申请；
@@ -82,18 +82,18 @@
 6.未接受人工服务（岗位优化、客服指导等）；
 7.未使用赠送权益或活动优惠。
 三、不支持退款的情形
-1.  出现以下任意一种情况，不予退款：
-2.  已发布职位（无论是否有人报名）；
-3.  已查看或下载简历（含简历库和投递）；
-4.  已使用推广资源（置顶、刷新、首页展示等）；
-5.  已接受人工服务（客服指导、岗位优化等）；
-6. 服务期间已产生招聘行为（收到投递、面试邀约等）；
-7. 套餐含赠送权益并已使用；
+1.出现以下任意一种情况，不予退款：
+2.已发布职位（无论是否有人报名）；
+3.已查看或下载简历（含简历库和投递）；
+4.已使用推广资源（置顶、刷新、首页展示等）；
+5.已接受人工服务（客服指导、岗位优化等）；
+6.服务期间已产生招聘行为（收到投递、面试邀约等）；
+7.套餐含赠送权益并已使用；
 8.付款超过 7 日；
 9.客户因自身原因停止招聘或不再使用服务。
 四、部分退款说明
-1.  若客户在已使用部分服务后申请退款，平台将按以下标准核算已用服务价值：
-项目	计费标准
+1.若客户在已使用部分服务后申请退款，平台将按以下标准核算已用服务价值：
+项目与计费标准
 职位发布（30 元/天/职位）
 简历查看（5 元/份）
 岗位置顶（10 元/天/职位）
@@ -101,14 +101,14 @@
 人工协助（100 元/次）
 2. 退款金额 = 实际支付金额 - 已使用服务价值总额。
 五、退款流程
-1.  客户联系客服提交退款申请；
-2.  平台将在 3 个工作日内核查并反馈退款金额；
-3.  双方确认后，平台将在 7 个工作日内原路退回；
-4.  如已开发票，需先退回等额发票；
-5.  退款成功后，剩余服务将同时终止。
+1.客户联系客服提交退款申请；
+2.平台将在 3 个工作日内核查并反馈退款金额；
+3.双方确认后，平台将在 7 个工作日内原路退回；
+4.如已开发票，需先退回等额发票；
+5.退款成功后，剩余服务将同时终止。
 六、特别提示
-1.  服务一经使用即计费，请您在购买前充分了解自身招聘需求，不做任何招聘效果保证，请使用者充分合理使用权益。
-2.  因政策调整、不可抗力或系统故障等原因造成服务中断，平台将酌情延长服务，不承担退款义务。
+1.服务一经使用即计费，请您在购买前充分了解自身招聘需求，不做任何招聘效果保证，请使用者充分合理使用权益。
+2.因政策调整、不可抗力或系统故障等原因造成服务中断，平台将酌情延长服务，不承担退款义务。
 温馨提醒：支付即代表您已阅读并同意《会员服务须知与退款条款》。
 成优网平台保留最终解释权。
       </div>
@@ -121,7 +121,7 @@
       </div>
 
       <div class="success-message" id="successMessage">
-        © 2025 成优网招聘平台· www.rpin.cc · 微信客服：bmxxw03
+        © 2025 成优网招聘平台www.rpin.cc微信客服：bmxxw03
       </div>
     </div>
   </div>
@@ -186,4 +186,5 @@
   </script>
 </body>
 </html>
+
 
