--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       </div>
 
       <div class="contract" id="refundContent" style="display:none;">
-成优网®招聘平台 · 会员服务须知与退款条款
-为保障招聘服务的公平与透明，请您在购买会员套餐前仔细阅读以下须知与退款规则。支付即代表您已充分了解并同意本条款。
+成优网®招聘平台 · 会员服务与退款须知
+为保障招聘服务的公平与透明，请您在购买会员套餐前仔细阅读以下须知与退款规则支付即代表您已充分了解并同意本条款。
 
 一、服务使用说明
 功能类别:权益说明
@@ -186,5 +186,6 @@
   </script>
 </body>
 </html>
+
 
 
