--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- ===== 第二页：退款协议 + 支付 ===== -->
     <div class="page" id="page2">
-      <h1>《会员服务》与《退款须知》</h1>
+      <h1>《会员服务》《退款须知》</h1>
 
       <div class="checkbox-container">
         <input type="checkbox" id="agree">
@@ -186,6 +186,7 @@
   </script>
 </body>
 </html>
+
 
 
 
