--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
 岗位置顶（10 元/天/职位）
 自动刷新（5 元/次/单天最高计 14 次）
 人工协助（100 元/次）
+广告位展示（500元/张）
 2. 退款金额 = 实际支付金额 - 已使用服务价值总额。
+特别说明：
+职位发布、岗位置顶等以“天”为单位的服务，一旦在当日 12:00 之后开通，或已在任意时间段使用，即视为 当日已使用，将按 整日计费，不做小时或部分时间折算。
+自动刷新、简历查看、人工协助等服务，以 实际使用次数 计费，不因时间段缩短而减免。
 -------------------------------------------------------------------------------
 六、退款流程
 1.客户联系客服提交退款申请；
@@ -199,6 +203,7 @@
   </script>
 </body>
 </html>
+
 
 
 
